--- a/content/themes/casper/partials/overlay-search.hbs
+++ b/content/themes/casper/partials/overlay-search.hbs
@@ -5,7 +5,7 @@
 	<div class="search-ghost">
 		<div class="section search-ghost-form">
 			<form class="trigger" id="ghosthunter">
-				<input id="search-field" placeholder="Type to search" />
+				<input id="search-field" placeholder="请输入关键词" />
 				<input id="search-button" type="submit" value="search">
 			</form>
 		</div>
