--- a/content/themes/paperleaf-theme-master/partials/sidebar.hbs
+++ b/content/themes/paperleaf-theme-master/partials/sidebar.hbs
@@ -21,7 +21,7 @@
 
     <footer class="sidebar-footer h6 clearfix gray light border-box lg-show js-sidebar-footer">
         <div class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</div>
-        <div class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a><br>and Paperleaf theme by <a href="http://www.nvslbs.com">NvsLbs</a></div>
+        <div class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a><br>and theme by <a href="http://www.nvslbs.com">NvsLbs</a> and sited by <a href="">Srefan</a></div>
     </footer>
 
 </div>
