--- a/content/themes/paperleaf-theme-master/default.hbs
+++ b/content/themes/paperleaf-theme-master/default.hbs
@@ -37,7 +37,7 @@
 
     <footer class="p3 center h6 clearfix gray light border-box lg-hide">
         <div class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</div>
-        <div class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a><br>and Paperleaf theme by <a href="http://www.nvslbs.com">NvsLbs</a></div>
+        <div class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a><br>and theme by <a href="http://www.nvslbs.com">NvsLbs</a> and sited by <a href="">Srefan</a></div>
     </footer>
 
     {{!-- jQuery needs to come before `{{ghost_foot}}` so that jQuery can be used in code injection --}}
