--- a/content/themes/paperleaf-theme-master/partials/loop.hbs
+++ b/content/themes/paperleaf-theme-master/partials/loop.hbs
@@ -7,11 +7,16 @@
             <a href="{{url}}"><img src="{{img_url feature_image}}" alt=""></a>
         </div>
         {{/if}}
-        <header class="post-header">
-            <h2 class="post-title mt0 break-word"><a class="black" href="{{url}}">{{{title}}}</a></h2>
-        </header>
+        <div class="post-header">
+            <h2 class="post-title mt0 break-word">
+                <a class="black" href="{{url}}">{{{title}}}</a>
+            </h2>
+        </div>
         <div class="post-excerpt h5 light">
-            <p class="mb0">{{excerpt}} <a class="read-more" href="{{url}}">&raquo;</a></p>
+             {{#if tags}}<span class="tags"><i class="fa fa-tags"></i>
+                <span>
+                {{tags prefix="" separator=", "}}</span>
+            </span>{{/if}}
         </div>
     </div>
 </article>
