--- a/content/themes/paperleaf-theme-master/amp.hbs
+++ b/content/themes/paperleaf-theme-master/amp.hbs
@@ -795,8 +795,7 @@
     {{/post}}
     <footer class="site-footer clearfix">
         <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a> and Paperleaf theme by <a href="http://www.nvslbs.com">NvsLbs</a></section>
-        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a> and theme by <a href="http://www.nvslbs.com">NvsLbs</a> and sited by <a href="">Srefan</a></section>
+        <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a> and theme by <a href="http://www.nvslbs.com">NvsLbs</a><br>and sited by <a href="">Srefan</a></section>
     </footer>
 </body>
 </html>
